--- a/pylon_camera/config/default.yaml
+++ b/pylon_camera/config/default.yaml
@@ -17,7 +17,7 @@ camera_info_url: ""
 #  The supported encodings are 'mono8', 'bgr8', 'rgb8', 'bayer_bggr8',
 #  'bayer_gbrg8' and 'bayer_rggb8'
 #  Default values are 'mono8' and 'rgb8'
-image_encoding: "bayer_rggb8"
+# image_encoding: "mono8"
 
 #  Binning factor to get downsampled images. It refers here to any camera
 #  setting which combines rectangular neighborhoods of pixels into larger
@@ -25,8 +25,8 @@ image_encoding: "bayer_rggb8"
 #  (width / binning_x) x (height / binning_y).
 #  The default values binning_x = binning_y = 0 are considered the same
 #  as binning_x = binning_y = 1 (no subsampling).
-binning_x: 2
-binning_y: 2
+# binning_x: 1
+# binning_y: 1
 
 #  The desired publisher frame rate if listening to the topics.
 #  This parameter can only be set once at startup
