--- a/pylon_camera/config/uav.yaml
+++ b/pylon_camera/config/uav.yaml
@@ -20,7 +20,7 @@
 #  The supported encodings are 'mono8', 'bgr8', 'rgb8', 'bayer_bggr8',
 #  'bayer_gbrg8' and 'bayer_rggb8'
 #  Default values are 'mono8' and 'rgb8'
-image_encoding: "bayer_rggb16"
+image_encoding: "rgb8"
 # image_encoding: "rgb8"
 
 #  Binning factor to get downsampled images. It refers here to any camera
@@ -72,7 +72,7 @@ shutter_mode: "global"
 #  try to reach the desired brightness by only varying the exposure time. If
 #  gain AND exposure are given, it is not possible to reach the brightness,
 #  because both are assumed to be fix.
-brightness: 100
+# brightness: 100
 
 #  Only relevant, if 'brightness' is set:
 #  The brightness_continuous flag controls the auto brightness function.
