rewrote the ROS driver as nodelet

--- a/pylon_camera/CMakeLists.txt
+++ b/pylon_camera/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(pylon_camera)
+cmake_policy(SET CMP0048 NEW)
+project(pylon_camera VERSION 666)
 
-add_definitions("-std=gnu++11")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 #set(CMAKE_CXX_FLAGS "-g -Wall -Wno-unknown-pragmas -Wno-delete-non-virtual-dtor -Wno-unused-variable")
 set(
     CATKIN_COMPONENTS
@@ -13,6 +17,7 @@ set(
      image_geometry
      image_transport
      roscpp
+     nodelet
      roslaunch
      sensor_msgs
 )
@@ -49,6 +54,7 @@ roslint_cpp(
     src/${PROJECT_NAME}/encoding_conversions.cpp
     src/${PROJECT_NAME}/main.cpp
     src/${PROJECT_NAME}/${PROJECT_NAME}_node.cpp
+    src/${PROJECT_NAME}/${PROJECT_NAME}_nodelet.cpp
     src/${PROJECT_NAME}/${PROJECT_NAME}_parameter.cpp
     src/${PROJECT_NAME}/${PROJECT_NAME}.cpp
     src/${PROJECT_NAME}/write_device_user_id_to_camera.cpp
@@ -56,6 +62,7 @@ roslint_cpp(
     include/${PROJECT_NAME}/binary_exposure_search.h
     include/${PROJECT_NAME}/encoding_conversions.h
     include/${PROJECT_NAME}/${PROJECT_NAME}_node.h
+    include/${PROJECT_NAME}/${PROJECT_NAME}_nodelet.h
     include/${PROJECT_NAME}/${PROJECT_NAME}_parameter.h
     include/${PROJECT_NAME}/${PROJECT_NAME}.h
     include/${PROJECT_NAME}/internal/${PROJECT_NAME}.h
@@ -104,6 +111,17 @@ target_link_libraries(
     ${PROJECT_NAME}_node
      ${PROJECT_NAME}
 )
+
+add_library(
+    PylonCameraNodelet
+     src/${PROJECT_NAME}/${PROJECT_NAME}_nodelet.cpp
+)
+
+target_link_libraries(
+    PylonCameraNodelet
+     ${PROJECT_NAME}
+)
+
 
 add_executable(
     write_device_user_id_to_camera
