--- a/pylon_camera/CMakeLists.txt
+++ b/pylon_camera/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-#set(CMAKE_CXX_FLAGS "-g -Wall -Wno-unknown-pragmas -Wno-delete-non-virtual-dtor -Wno-unused-variable")
+add_compile_options("-Wall")
+add_compile_options("-Wextra")
+add_compile_options("-g")
+
 set(
     CATKIN_COMPONENTS
      actionlib
