--- a/pylon_camera/config/uav.yaml
+++ b/pylon_camera/config/uav.yaml
@@ -48,6 +48,10 @@ trigger:
   # 1: FrameBurstStart
   selector: 0
   # Valid values are:
+  # false: off
+  # true: on
+  mode: false
+  # Valid values are:
   # 0: Software
   # 1: Line1
   # 2: Line2
@@ -58,14 +62,9 @@ trigger:
   # 0: RisingEdge
   # 1: FallingEdge
   activation: 0
+  timeout: 5000 # ms
 
-line:
-  # Valid values are:
-  # 1: Line1
-  # 2: Line2
-  # 3: Line3
-  # 4: Line4
-  selector: 2
+line1:
   # Valid values are:
   # 0: Input
   # 1: Output
@@ -77,6 +76,45 @@ line:
   # 3: Timer1Active
   # 4: FlashWindow (only valid for shutter mode "Rolling")
   mode: 0
+
+line2:
+  # Valid values are:
+  # 0: Input
+  # 1: Output
+  source: 1
+  # Valid values are:
+  # 0: ExposureActive
+  # 1: FrameTriggerWait
+  # 2: UserOutput1
+  # 3: Timer1Active
+  # 4: FlashWindow (only valid for shutter mode "Rolling")
+  mode: 1
+
+line3:
+  # Valid values are:
+  # 0: Input
+  # 1: Output
+  source: 1
+  # Valid values are:
+  # 0: ExposureActive
+  # 1: FrameTriggerWait
+  # 2: UserOutput1
+  # 3: Timer1Active
+  # 4: FlashWindow (only valid for shutter mode "Rolling")
+  mode: 2
+
+line4:
+  # Valid values are:
+  # 0: Input
+  # 1: Output
+  source: 1
+  # Valid values are:
+  # 0: ExposureActive
+  # 1: FrameTriggerWait
+  # 2: UserOutput1
+  # 3: Timer1Active
+  # 4: FlashWindow (only valid for shutter mode "Rolling")
+  mode: 3
 
 ##########################################################################
 ######################## Image Intensity Settings ########################
