--- a/pylon_camera/config/uav.yaml
+++ b/pylon_camera/config/uav.yaml
@@ -42,6 +42,13 @@ frame_rate: 5.0
 #  Default value is "" (empty) means default_shutter_mode
 shutter_mode: "global"
 
+
+# Camera grab strategy 
+# 0 = GrabStrategy_OneByOne
+# 1 = GrabStrategy_LatestImageOnly
+# 2 = GrabStrategy_LatestImages
+grab_strategy: 1
+
 ##########################################################################
 ######################## Image Intensity Settings ########################
 ##########################################################################
