--- a/pylon_camera/config/default.yaml
+++ b/pylon_camera/config/default.yaml
@@ -70,12 +70,12 @@ grab_strategy : 1
 ##########################################################################
 
 #  The exposure time in microseconds to be set after opening the camera.
-exposure: 200.0
+# exposure: 200.0
 
 #  The target gain in percent of the maximal value the camera supports
 #  For USB-Cameras, the gain is in dB, for GigE-Cameras it is given in so
 #  called 'device specific units'.
-# gain: 0.5
+# gain: 0.2
 
 #  Gamma correction of pixel intensity.
 #  Adjusts the brightness of the pixel values output by the camera's sensor
@@ -91,7 +91,7 @@ exposure: 200.0
 #  try to reach the desired brightness by only varying the exposure time. If
 #  gain AND exposure are given, it is not possible to reach the brightness,
 #  because both are assumed to be fix.
-# brightness: 100
+brightness: 100
 
 #  Only relevant, if 'brightness' is set:
 #  The brightness_continuous flag controls the auto brightness function.
@@ -101,7 +101,7 @@ exposure: 200.0
 #  trying to adapt to changing light conditions. This is only possible for
 #  values in the possible auto range of the pylon API which is e.g. [50 - 205]
 #  for acA2500-14um and acA1920-40gm
-# brightness_continuous: true
+brightness_continuous: true
 
 #  Only relevant, if 'brightness' is set:
 #  If the camera should try to reach and / or keep the brightness, hence
@@ -113,7 +113,7 @@ exposure: 200.0
 #  reached by adapting the exposure time.
 #  The gain_auto flag indicates, that the desired brightness will be
 #  reached by adapting the gain.
-# exposure_auto: true
+exposure_auto: true
 # gain_auto: true
 
 ##########################################################################
